--- a/.cricleci/config.yml
+++ b/.cricleci/config.yml
@@ -1,43 +1,20 @@
-# Couldn't automatically generate a config from your source code.
-# This is a generic template to serve as a base for your custom config
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
+
 jobs:
-  test:
+  run_docker_commands:
     docker:
-      - image: cimg/base:stable
+      - image: balenalib/generic-aarch64  # Using the balenalib/generic-aarch64 Docker image
     steps:
-      - checkout
-      # Replace this with a real test runner invocation
+      - checkout  # Check out the code from the repository (optional)
       - run:
-          name: Run tests
-          command: echo 'replace me with real tests!' && false
-  build:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      # Replace this with steps to build a package, or executable
-      - run:
-          name: Build an artifact
-          command: touch example.txt
-      - store_artifacts:
-          path: example.txt
-  deploy:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
-      - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
+          name: Pull Docker image and run commands
+          command: |
+            # Run the commands inside the Docker container
+            uname -m
+            lscpu
+
 workflows:
-  example:
+  version: 2
+  build:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - test
+      - run_docker_commands
