--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,25 @@ version: 2.1
 jobs:
   run_docker_commands:
     docker:
-      - image: balenalib/generic-aarch64  # Using the balenalib/generic-aarch64 Docker image
+      - image: cimg/python:3.9  # You can use any base image for your CI environment
     steps:
-      - checkout  # Check out the code from the repository (optional)
+      - checkout  # Checkout the code (optional, if you have any code to check out)
       - run:
-          name: Pull Docker image and run commands
+          name: Setup Docker Buildx and QEMU for ARM emulation
           command: |
-            # Run the commands inside the Docker container
-            uname -m
-            lscpu
+            # Install QEMU for ARM emulation
+            sudo apt-get update
+            sudo apt-get install -y qemu-user-static
+            docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
+            # Enable Docker Buildx
+            docker buildx create --use
+
+            # Pull the ARM64 image (balenalib/generic-aarch64)
+            docker pull balenalib/generic-aarch64
+
+            # Run the ARM64 image with uname and lscpu commands
+            docker run --rm balenalib/generic-aarch64 bash -c "uname -m && lscpu"
 
 workflows:
   version: 2
