--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   run_docker_commands:
     docker:
       - image: cimg/python:3.9  # Base image with Docker support
-    resource_class: 2xlarge+
+    resource_class: 2xlarge
     steps:
       - setup_remote_docker:
           docker_layer_caching: true  # Enable Docker layer caching for faster builds
