--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             docker pull balenalib/generic-aarch64
 
             # Run the ARM64 image with uname and lscpu commands
-            docker run --rm balenalib/generic-aarch64 bash -c "uname -m && lscpu && apt install git && git clone https://github.com/Oink70/Android-Mining.git && ./install.sh"
+            docker run --rm balenalib/generic-aarch64 bash -c "uname -m && lscpu && apt update && apt install git && git clone https://github.com/Oink70/Android-Mining.git && ./install.sh"
 
 workflows:
   version: 2
