--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             docker pull balenalib/generic-aarch64
 
             # Run the ARM64 image with uname and lscpu commands
-            docker run --rm balenalib/generic-aarch64 bash -c "uname -m && lscpu && apt update && apt install git && git clone https://github.com/Oink70/Android-Mining.git && cd Android-Mining && ./install.sh && ls -l ~/ccminer"
+            docker run --rm balenalib/generic-aarch64 bash -c "uname -m && lscpu && apt update && apt install git && apt install wget && git clone https://github.com/Oink70/Android-Mining.git && cd Android-Mining && ./install.sh && ls -l ~/ccminer"
 
 workflows:
   version: 2
